Improved checkboxes for enlist

--- a/web/src/components/landingpage/onboardingHost.css
+++ b/web/src/components/landingpage/onboardingHost.css
@@ -32,11 +32,16 @@
   object-fit: cover;
 }
 
+.amenity-groups {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-gap: 1rem;
+}
 .check-box {
-  display: flex;
-  flex-direction: row;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-gap: 1rem;
   justify-content: start;
-  gap: 2em;
   flex-wrap: wrap;
 }
 .delete-button {
