--- a/web/src/components/contact/contact.css
+++ b/web/src/components/contact/contact.css
@@ -4,7 +4,8 @@
 }
 
 .contact {
-    width: 93%;
+    width: 86%;
+    margin: 0 auto;
     margin: 50px auto;
   }
 
@@ -45,7 +46,7 @@
 
   .contactform input::placeholder,
   .contactform textarea::placeholder {
-     text-align: left;
+      text-align: left;
   }
   
   .contactform input:not(.biginput input) {
@@ -95,16 +96,11 @@
     cursor: pointer;
   }
   
-  /* Media query for phone screens */
-  @media screen and (max-width: 930px) {
+  @media screen and (max-width: 1030px) {
     .contact {
-      padding: 10px;
+      padding: 20px;
       margin: 10px auto;
       font-size: 14px;
-    }
-  
-    .contactform {
-      padding: 10px;
     }
   
     .contactform h2 {
