--- a/web/src/components/about/howitworksrework.css
+++ b/web/src/components/about/howitworksrework.css
@@ -1,151 +1,158 @@
-.howitworksmain{
-  width: 100%;
+.howitworksmain {
+  margin: 0 auto;
+  width: 80%;
   display: flex;
   align-items: center;
   justify-content: center;
   flex-direction: column;
 }
 
-.howitworksTitleDomits{
-  font-size: 2.25rem;
+.howitworksTitleDomits {
+  font-size: 2rem;
+  font-weight: 500;
+  margin-top: 3.6rem;
+}
+
+.howitworkssmallerTitleDomits {
+  font-size: 1.2rem;
+  font-weight: 400;
   margin: 0rem;
 }
 
-.howitworkssmallerTitleDomits{
-  font-size: 1.25rem;
-  margin: 0rem;
-}
-
-.howitworkstitlescontainer{
-  width: 100%;
-  gap: 1.375rem;
+.howitworkstitlescontainer {
+  max-width: 100%;
+  margin: 0 auto;
   height: 10rem;
   display: flex;
   align-items: center;
   flex-direction: column;
-  justify-content: center;
-  margin-top: 3rem;
 }
 
-.guestSmallTitleContainer{
-  width: 84.12rem;
-  margin-top: 1.4rem;
+.guestSmallTitleContainer {
+  width: 100%;
+  max-width: 84.12rem;
+  margin-top: 1.3rem;
   display: flex;
-  margin-bottom: 0.6rem;
+  justify-content: flex-start;
 }
 
-.infoTitleGuest{
-  font-size: 2.25rem;
+.infoTitleGuest {
+  font-size: 1.8rem;
   font-weight: 500;
   margin: 0rem;
 }
 
-.guestinfoblockhowitworks{
-  width: 84.12rem;
+.guestinfoblockhowitworks {
+  width: 100%;
+  max-width: 80.12rem;
   background: #0D9813;
   border-radius: 0.4rem;
-  display: flex;
-  flex-wrap: wrap;
-  align-items: center;
-  justify-content: center;
-  gap: 2rem;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(240px, 1fr));
+  gap: 1rem;
+  padding: 1rem;
 }
 
-.informationContainerHowItWorks{
-  width: 23.8rem;
-  margin-top: 1rem;
-  margin-bottom: 1rem;
-  height: 14rem;
+.informationContainerHowItWorks {
+  background-color: inherit;
+  margin: 0.3rem auto;
+  height: auto; 
   display: flex;
   flex-direction: column;
+  padding: 1rem;
+  text-align: left;
 }
 
-
-.borderleft{
+.borderleft {
   border-left: 0.2rem solid white;
-  padding-left: 2rem;
-
+  padding-left: 3rem;
 }
 
-.borderright{
+.borderright {
   border-right: 0.2rem solid white;
+  padding-right: 3rem;
 }
 
-.titleIconHowItWorks{
+.titleIconHowItWorks {
   height: 3rem;
   width: 100%;
   display: flex;
+  justify-content: space-between; 
   align-items: center;
-  justify-content: flex-start;
-  text-align: center;
-  gap: 2rem;
-  margin-bottom: 2.5rem;
+  height: auto; 
+  width: 100%; 
+  margin-bottom: 0.5rem; 
+  margin-bottom: 1rem;
 }
 
-.titleinformationH3{
-  font-size: 1.5rem;
+.titleinformationH3 {
+  font-size: 1.4rem;
   color: white;
   font-weight: 500;
+  margin: 0; 
 }
 
-.informationHowItWorksP{
+.informationHowItWorksP {
   font-size: 1rem;
   color: white;
   max-width: 19rem;
+  min-width: 100%;
+  margin-top: 1.6rem;
+  text-align: left;
 }
 
-.bluebackground{
+.bluebackground {
   background: #052C5A;
   margin-bottom: 7rem;
+  padding: 1rem;
 }
 
-@media (max-width: 1364px) {
-
-  .howitworksmain{
-    padding-left: 1rem;
+@media (max-width: 994px) {
+  .informationContainerHowItWorks {
+    height: auto;
+    padding: 1rem; 
+    margin: 1rem 0; 
+    align-items: flex-start; 
   }
-  .guestinfoblockhowitworks{
-    width:100%;
-  }
 
-  .guestSmallTitleContainer{
-    width: 100%;
+  .titleIconHowItWorks {
+    justify-content: space-between; 
     align-items: center;
-    justify-content: center;
-    margin-bottom: 1.1rem;
+    height: auto; 
+    width: 100%; 
+    margin-bottom: 0.5rem; 
   }
 
-
-} 
-
-@media (max-width: 1238px) {
-
-  .howitworksmain{
-    padding-left: 1rem;
-    padding-right: 1rem;
+  .titleinformationH3 {
+    text-align: left; 
+    margin: 0; 
   }
 
-  .borderleft{
-    border-left: 0.0rem solid white;
+  .informationHowItWorksP {
+    width: 100%; 
+  }
+
+  .guestinfoblockhowitworks {
+    grid-template-columns: 1fr;
+    gap: 1rem; 
+  }
+
+  .borderleft {
+    border-left: none;
     border-top: 0.2rem solid white;
-    padding-left: 2rem;
-  
   }
-  
-  .borderright{
-    border-right: 0.2rem solid white;
-  }
-}
 
-@media (max-width:796px){  
-  .borderright{
-    border-right: 0.0rem solid white;
+  .borderright {
+    border-right: none;
     border-bottom: 0.2rem solid white;
-    padding-left: 0rem;
-    padding-bottom: 2rem;
   }
 
-  .borderleft{
-    padding-top: 2rem; 
+  .guestSmallTitleContainer {
+    width: 100%;
+    align-items: flex-start; 
+    justify-content: flex-start; 
+    margin-bottom: 1.1rem;
+    padding-left: 1rem; 
   }
 }
+
