--- a/web/src/components/about/whydomits.css
+++ b/web/src/components/about/whydomits.css
@@ -1,54 +1,63 @@
 .WhyDomitsTwoMain {
-    width: 100%;
+    width: 90%;
+    margin: 0 auto;
 }
 
 .WhyDomitsTwoTitleTextContainer {
-    padding: 6.75rem;
-    padding-bottom: 1rem;
+    padding: 5rem 6.75rem;
+    padding-bottom: 0rem;
 }
 
 .WhyDomitsTwoH3 {
-    font-size: 2.25rem;
+    font-size: 2rem;
     margin: 0rem;
-    font-weight: 400;
+    font-weight: 500;
+    text-align: center;
 }
 
 .WhyDomitsTwoH4 {
-    font-size: 2rem;
+    font-size: 1.45rem;
     font-weight: 400;
-    margin-top: 1.6rem;
+    margin-top: 0.4rem;
     margin-bottom: 3rem;
+    text-align: center;
 }
 
 .WhyDomitsTwoP {
     font-size: 1.25rem;
     font-weight: 400;
-    margin-top: 1.6rem;
     margin-bottom: 3rem;
     color: black;
 }
 
+img[alt="check"]{
+    width: 25px;
+    margin-right: 9px;
+    margin-top: 10px;
+}
+
 .WhyDomitsTwoCardsContainer {
     min-height: 20rem;
-    width: 100%;
+    width: 90%;
+    margin: auto;
     display: flex;
-    align-items: center;
-    justify-content: center;
-    gap: 5.6rem;
+    align-items: flex-start;
+    justify-content: flex-start;
+    gap: 0.6rem;
     flex-wrap: wrap;
 }
 
 .WhyDomitsTwoCard {
-    width: 39.2%;
+    width: 45%;
+    margin: 0 auto;
     background: #0D9813;
     min-height: 9.3rem;
     border-radius: 10px;
     display: flex;
     align-items: center;
-    justify-content: center;
-    padding-left: 1.8rem;
-    padding-right: 1.8rem;
-    gap: 2rem;
+    justify-content: space-between;
+    gap: 1.3rem;
+    padding: 0rem 1rem;
 }
 
 .WhyDomitsTwoCardP {
@@ -57,78 +66,29 @@
     color: white;
 }
 
-@media (max-width: 1024px) {
-    .WhyDomitsTwoTitleTextContainer {
-        padding: 5rem;
+@media (max-width: 1120px){
+    .WhyDomitsTwoMain {
+        width: 110%;
+        margin: 0 auto;
     }
 
-    .WhyDomitsTwoH3 {
-        font-size: 2rem;
-    }
-
-    .WhyDomitsTwoH4 {
-        font-size: 1.75rem;
-    }
-
-    .WhyDomitsTwoP {
-        font-size: 1.125rem;
-    }
-
-    .WhyDomitsTwoCardP {
-        font-size: 1.125rem;
-    }
-}
-
-@media (max-width: 768px) {
-    .WhyDomitsTwoTitleTextContainer {
-        padding: 4rem;
-    }
-
-    .WhyDomitsTwoH3 {
-        font-size: 1.75rem;
-    }
-
-    .WhyDomitsTwoH4 {
-        font-size: 1.5rem;
-    }
-
-    .WhyDomitsTwoP {
-        font-size: 1rem;
-    }
-
-    .WhyDomitsTwoCard {
+    .WhyDomitsTwoCardsContainer {
         width: 100%;
-        min-height: 7rem;
+        margin: auto;
+        display: flex;
+        align-items: flex-start;
+        flex-direction: column;
+        justify-content: flex-start;
+        gap: 0.6rem;
+        flex-wrap: wrap;
     }
-
-    .WhyDomitsTwoCardP {
-        font-size: 1rem;
-    }
-}
-
-@media (max-width: 480px) {
-    .WhyDomitsTwoTitleTextContainer {
-        padding: 2rem;
-    }
-
-    .WhyDomitsTwoH3 {
-        font-size: 1.5rem;
-    }
-
-    .WhyDomitsTwoH4 {
-        font-size: 1.25rem;
-    }
-
-    .WhyDomitsTwoP {
-        font-size: 0.875rem;
-    }
-
+    
     .WhyDomitsTwoCard {
-        width: 100%;
-        min-height: 5rem;
+        width: 73%;   
     }
 
-    .WhyDomitsTwoCardP {
-        font-size: 0.875rem;
+    .WhyDomitsTwoCard:last-child{
+        margin-top: 2rem;
+        margin-bottom: 4rem;
     }
 }
