--- a/web/src/components/careers/careers.css
+++ b/web/src/components/careers/careers.css
@@ -1,7 +1,13 @@
+main{
+    width: 86%;
+    margin: 0 auto;
+}
+
 .crew {
     text-align: center;
-    font-size: 28px;
-    margin-bottom: 20px;
+    font-size: 2.5rem;
+    margin: 3rem;
+    font-weight: 500;
     color: #333;
 }
 
@@ -106,6 +112,9 @@
 }
 
 @media (max-width: 900px) {
+    main{
+        width: 100%;
+    }
     .job-box {
         flex: 1 1 calc(50% - 20px);
     }
