--- a/web/src/components/chat/chat.css
+++ b/web/src/components/chat/chat.css
@@ -30,7 +30,7 @@
     width: 30%;
     display: flex;
     justify-content: center;
-    align-items: flex-start;
+    align-items: center;
 
 }
 
@@ -167,6 +167,7 @@ p{
     overflow-y: auto;
     overflow-x: hidden;
     max-height: 100%;
+    background: white;
     display: flex;
     justify-content: flex-start;
     align-items: center;
@@ -184,13 +185,15 @@ p{
 .chat__user{
     width: 100%;
     height: 130px;
+    background: white;
+    border-radius: 2rem;
     display: flex;
     justify-content: flex-start;
     align-items: center;
     gap: 20px;
     padding-left: 15px;
+    box-shadow: 0 20px 50px 0 rgba(0, 0, 0, 0.1);
     position: relative;
-    border-bottom: #eee solid 1.5px;
 }
 
 
@@ -250,11 +253,11 @@ p{
     flex-direction: column;
     border-top-left-radius: 1.5rem;
     border-top-right-radius: 1.5rem;
+    box-shadow: 0 20px 50px 0 rgba(0, 0, 0, 0.2);
     border-bottom-left-radius: 1.5rem;
     border-bottom-right-radius: 1.5rem;
     padding-left: 25px;
     padding-right: 25px;
-    border: 1.5px solid #eee;
 
 }
 
@@ -297,9 +300,7 @@ p{
     margin-left: auto; 
     display: flex;
     justify-content: flex-end;
-    background: #28a745;
-    border-bottom-right-radius: 0;
-    color: white;
+    background: #D1C4DA;
 }
 
 .chat__output{
@@ -308,9 +309,7 @@ p{
 
 .chat__dialog--guest {
     margin-right: auto; 
-    background: #eee;
-    color: black;
-    border-bottom-left-radius: 0;
+    background: #C2E5C4;
 
 
 }
@@ -327,9 +326,9 @@ p{
 
 .chat__input{
     width: 85%;
-    height: 41px;
-    border-radius: 20px;
-    border: 1.5px solid #ccc;
+    height: 50px;
+    border-radius: 1rem;
+    border: 1.5px solid black;
     padding-left: 20px;
 }
 
@@ -343,19 +342,19 @@ p{
     justify-content: center;
     align-items: center;
     gap: 15px;
-    border-bottom: 1px solid #eee;
+    border-bottom: 1px solid black;
     padding: 5px;
 }
 
 
 
 .chat__send{
-    border-radius: 20px;
-    color: white;
+    border-radius: 1rem;
+    color: #707070;
     border: none;
     width: 70px;
     cursor: pointer;
-    background: #28a745;
+    background: #C2E5C4;
     height: 100%;
     /* background-image: url(send.png);
     background-repeat: no-repeat;
@@ -689,95 +688,4 @@ a{
     .chat__notification {
         right: -10%; 
     }
-}
-
-/* Add these styles to chat.css */
-
-.chat__message {
-    display: none;
-}
-
-.chat__people {
-    display: block;
-}
-
-.chat__message--open {
-    display: block;
-}
-
-.chat__people--hidden {
-    display: none;
-}
-
-@media (min-width: 1277px) {
-    .chat__message,
-    .chat__people {
-        display: flex;
-    }
-
- 
-
-    .chat__message--open,
-    .chat__people--hidden {
-        display: flex;
-    }
-}
-
-.chat__backButton {
-    display: none;
-    background-color: #f0f0f0;
-    border: none;
-    padding: 10px;
-    cursor: pointer;
-    margin-bottom: 15px;
-}
-
-@media (max-width: 1277px) {
-    .chat__backButton {
-        display: block;
-    }
-
-    .chat__message{
-        width: 100%;
-    }
-
-    .chat__figure{
-        height: 75%;
-        padding: 0;
-    }
-
-    .chat__aside{
-        padding: 0;
-    }
-
-    .chat__input {
-        width: 60%;
-        height: 41px;
-        border-radius: 20px;
-        border: 1.5px solid #ccc;
-        padding-left: 20px;
-      }
-
-      .chat__send{
-        height: 41px;
-      }
-
-      .chat__inputContainer {
-        width: 100%;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        height: auto;
-        gap: 10px;
-        padding-bottom: 10px;
-      }
-
-      .chat__chatContainer {
-        height: 350px;
-      }
-
-      .chat__people{
-        width: 100%;
-        display: flex;
-      }
 }
