--- a/web/src/components/hostdashboard/StripeModal.module.css
+++ b/web/src/components/hostdashboard/StripeModal.module.css
@@ -2,7 +2,7 @@
     z-index: 1;
     left: 0;
     width: 100%;
-    height: 2vw;
+    height: 1vw;
     margin-left: auto;
     margin-right: auto;
     background-color: #0D9813;
@@ -13,6 +13,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    align-content: center;
     transition: transform 0.3s ease-out;
     transform: translateY(-100%);
     opacity: 0;
@@ -29,7 +30,6 @@
   
   .StripeModal h2 {
     font-size: 1.4em;
-    margin: 0 15px;
     flex-grow: 1;
   }
   
