--- a/web/src/components/review/ReviewPage.module.css
+++ b/web/src/components/review/ReviewPage.module.css
@@ -1,3 +1,78 @@
 .main {
+    width: 90%;
+    max-width: 75rem;
+    margin: 0 auto;
+    padding: 1.25rem;
+    display: flex;
+    flex-direction: column;
+    h1 {
+        align-self: center;
+    }
+    .rating {
+        display: inline-block;
+        position: relative;
+        height: 40vh;
+        line-height: 100px;
+        font-size: 2rem;
+        align-self: center;
+    }
 
+    .rating label {
+        position: absolute;
+        top: 0;
+        left: 0;
+        height: 100%;
+        cursor: pointer;
+    }
+
+    .rating label:last-child {
+        position: static;
+    }
+
+    .rating label:nth-child(1) {
+        z-index: 5;
+    }
+
+    .rating label:nth-child(2) {
+        z-index: 4;
+    }
+
+    .rating label:nth-child(3) {
+        z-index: 3;
+    }
+
+    .rating label:nth-child(4) {
+        z-index: 2;
+    }
+
+    .rating label:nth-child(5) {
+        z-index: 1;
+    }
+
+    .rating label input {
+        position: absolute;
+        top: 0;
+        left: 0;
+        opacity: 0;
+    }
+
+    .rating label .icon {
+        float: left;
+        color: transparent;
+        font-size: 4rem;
+    }
+
+    .rating label:last-child .icon {
+        color: gray;
+    }
+
+    .rating:not(:hover) label input:checked ~ .icon,
+    .rating:hover label:hover input ~ .icon {
+        color: gold;
+    }
+
+    .rating label input:focus:not(:checked) ~ .icon:last-child {
+        color: gray;
+        text-shadow: 0 0 5px gold;
+    }
 }
