--- a/web/src/components/about/helpdesk.css
+++ b/web/src/components/about/helpdesk.css
@@ -1,11 +1,20 @@
 .helpContainer {
   width: 100%;
-  padding: 50px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin: 0 auto;
+  margin-bottom: 50px;
+}
+
+.faqHeader3 {
+  margin: 3.5rem auto 1.4rem auto;
+  font-size: clamp(20px, 4vw, 32px);
 }
 
 .helpSearchWrapper {
   position: relative;
-  width: 40%;
+  width: 44.5%;
   max-width: 100%;
 }
 
@@ -23,7 +32,7 @@
   background-color: var(--primary-color);
   color: white;
   font-weight: 500;
-  right: 1px;
+  right: -20px;
   top: 5px;
   padding: 7px 15px;
 }
@@ -33,8 +42,9 @@
   background-color: #367a4a;
 }
 
-@media (max-width: 900px) {
+@media (max-width: 960px) {
   .helpSearchWrapper {
-    width: 100%;
+    width: 79%;
+    left: 1.1%;
   }
 }
