--- a/web/src/components/review/ReviewPage.module.css
+++ b/web/src/components/review/ReviewPage.module.css
@@ -143,4 +143,8 @@
             padding: 1.5rem;
         }
     }
+    .spinnerDiv {
+        align-self: center;
+        padding: 2rem;
+    }
 }
